# cli-utils

./: .gitignore  CMakeLists.txt  README.md
include/: cat.h  clear.h  grep.h
src/: cat.cpp  clear.cpp  grep.cpp  main.cpp  print_help.cpp
